TunnelEditor: clean up xml

--- a/ui/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_editor_fragment.xml
@@ -25,26 +25,26 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/main_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorBackground">
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorBackground">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="16dp"
                     app:cardBackgroundColor="?attr/elevationOverlayColor"
                     app:cardCornerRadius="0dp"
@@ -92,9 +92,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
-                            app:layout_constraintHorizontal_weight="0.7"
-                            app:layout_constraintHorizontal_chainStyle="spread"
                             app:layout_constraintEnd_toStartOf="@id/generate_private_key_button"
+                            app:layout_constraintHorizontal_chainStyle="spread"
+                            app:layout_constraintHorizontal_weight="0.7"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/interface_name_layout">
 
@@ -117,19 +117,19 @@
                             android:onClick="@{() -> config.interface.generateKeyPair()}"
                             android:text="@string/generate"
                             android:textColor="?attr/colorSecondary"
-                            app:layout_constraintHorizontal_weight="0.3"
                             app:layout_constraintBaseline_toBaselineOf="@id/private_key_text_layout"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_weight="0.3"
                             app:layout_constraintStart_toEndOf="@id/private_key_text_layout"
                             app:rippleColor="?attr/colorSecondary" />
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/public_key_label_layout"
                             style="@style/TextInputLayoutBase"
-                            android:hint="@string/public_key"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
+                            android:hint="@string/public_key"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/private_key_text_layout">
@@ -138,10 +138,10 @@
                                 android:id="@+id/public_key_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="@string/hint_generated"
                                 android:editable="false"
                                 android:ellipsize="end"
                                 android:focusable="false"
+                                android:hint="@string/hint_generated"
                                 android:onClick="@{ClipboardUtils::copyTextView}"
                                 android:singleLine="true"
                                 android:text="@{config.interface.publicKey}" />
@@ -153,9 +153,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
+                            app:layout_constraintEnd_toStartOf="@id/listen_port_label_layout"
                             app:layout_constraintHorizontal_chainStyle="spread"
                             app:layout_constraintHorizontal_weight="0.7"
-                            app:layout_constraintEnd_toStartOf="@id/listen_port_label_layout"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/public_key_label_layout">
 
@@ -171,14 +171,14 @@
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/listen_port_label_layout"
                             style="@style/TextInputLayoutBase"
-                            android:hint="@string/listen_port"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
-                            app:layout_constraintHorizontal_weight="0.3"
-                            app:layout_constraintTop_toBottomOf="@id/public_key_label_layout"
+                            android:hint="@string/listen_port"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/addresses_label_layout">
+                            app:layout_constraintHorizontal_weight="0.3"
+                            app:layout_constraintStart_toEndOf="@id/addresses_label_layout"
+                            app:layout_constraintTop_toBottomOf="@id/public_key_label_layout">
 
                             <com.wireguard.android.widget.MonkeyedTextInputEditText
                                 android:layout_width="match_parent"
@@ -196,9 +196,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
+                            app:layout_constraintEnd_toStartOf="@id/mtu_label_layout"
                             app:layout_constraintHorizontal_chainStyle="spread"
                             app:layout_constraintHorizontal_weight="0.7"
-                            app:layout_constraintEnd_toStartOf="@id/mtu_label_layout"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/addresses_label_layout">
 
@@ -218,17 +218,17 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:hint="@string/mtu"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_weight="0.3"
                             app:layout_constraintStart_toEndOf="@id/dns_servers_label_layout"
-                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@id/dns_servers_label_layout">
 
                             <com.wireguard.android.widget.MonkeyedTextInputEditText
                                 android:id="@+id/mtu_text"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="number"
                                 android:hint="@string/hint_automatic"
+                                android:inputType="number"
                                 android:text="@={config.interface.mtu}"
                                 android:textAlignment="center" />
                         </com.google.android.material.textfield.TextInputLayout>
@@ -253,14 +253,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="?attr/actionBarSize"
                     android:divider="@null"
                     android:orientation="vertical"
-                    android:layout_marginBottom="?attr/actionBarSize"
                     app:items="@{config.peers}"
                     app:layout="@{@layout/tunnel_editor_peer}"
                     tools:ignore="UselessLeaf" />
             </LinearLayout>
         </ScrollView>
+
         <TextView
             style="@style/TextAppearance.MaterialComponents.Button"
             android:layout_width="match_parent"
@@ -271,5 +272,5 @@
             android:onClick="@{() -> config.addPeer()}"
             android:text="@string/add_peer"
             app:layout_anchorGravity="bottom" />
-     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
