TunnelEditor: move hint to label and add discouraged optional
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/layout/tunnel_editor_peer.xml
+++ b/ui/src/main/res/layout/tunnel_editor_peer.xml
@@ -62,6 +62,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:hint="@string/public_key"
                 app:layout_constraintBottom_toTopOf="@+id/pre_shared_key_label_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +72,6 @@
                     android:id="@+id/public_key_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/public_key"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:text="@={item.publicKey}"
                     app:filter="@{KeyInputFilter.newInstance()}" />
@@ -112,7 +112,7 @@
                     android:id="@+id/persistent_keepalive_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_optional"
+                    android:hint="@string/hint_optional_discouraged"
                     android:inputType="number"
                     android:text="@={item.persistentKeepalive}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -123,6 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:hint="@string/endpoint"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/persistent_keepalive_label_layout">
 
@@ -131,7 +132,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:hint="@string/endpoint"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:text="@={item.endpoint}" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -144,6 +144,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
+                android:hint="@string/allowed_ips"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/endpoint_label_layout">
@@ -152,7 +153,6 @@
                     android:id="@+id/allowed_ips_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/allowed_ips"
                     android:inputType="textNoSuggestions|textVisiblePassword"
                     android:text="@={item.allowedIps}" />
             </com.google.android.material.textfield.TextInputLayout>
