--- a/ui/src/main/res/layout/tunnel_editor_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_editor_fragment.xml
@@ -216,12 +216,12 @@
                             style="@style/TextInputLayoutBase"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="4dp"
+                            android:layout_margin="4dp"
                             android:hint="@string/mtu"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_weight="0.3"
                             app:layout_constraintStart_toEndOf="@id/dns_servers_label_layout"
-                            app:layout_constraintTop_toTopOf="@id/dns_servers_label_layout">
+                            app:layout_constraintTop_toBottomOf="@id/addresses_label_layout">
 
                             <com.wireguard.android.widget.MonkeyedTextInputEditText
                                 android:id="@+id/mtu_text"
