TunnelEditor: abstract out section font
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -51,7 +51,7 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/interface_title"
-                    style="@style/TextAppearance.MaterialComponents.Headline6"
+                    style="@style/SectionText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/interface_title"
