--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -27,7 +27,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                style="@style/TextAppearance.MaterialComponents.Headline6"
+                style="@style/SectionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/peer"
