--- a/ui/src/main/res/layout/tunnel_editor_peer.xml
+++ b/ui/src/main/res/layout/tunnel_editor_peer.xml
@@ -35,7 +35,7 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/peer_title"
-                style="@style/TextAppearance.MaterialComponents.Headline6"
+                style="@style/SectionText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
