Fix tunnel editor theming
Also set textInputStyle in the base theme to avoid setting styles to all elements

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/values-v21/styles.xml
+++ b/ui/src/main/res/values-v21/styles.xml
@@ -21,5 +21,6 @@
         <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="materialAlertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.MaterialComponents.ActionBar</item>
+        <item name="textInputStyle">@style/TextInputLayoutBase</item>
     </style>
 </resources>
