TunnelDetail: set singleLine=true for API <=23
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -105,6 +105,7 @@
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/public_key_description"
                     android:ellipsize="end"
+                    android:singleLine="true"
                     android:maxLines="1"
                     android:onClick="@{ClipboardUtils::copyTextView}"
                     android:text="@{config.interface.keyPair.publicKey.toBase64}"
