--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/public_key_description"
                 android:ellipsize="end"
+                android:singleLine="true"
                 android:maxLines="1"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.publicKey.toBase64}"
